--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,7 @@ name: base64
 version: 0.5.0
 author: warren.strange@gmail.com
 description: A port of the Apache commons Base 64 codec to dart.
+homepage: https://github.com/wstrange/base64
 dependencies:
   unittest: any
 
-#dependencies:
-#  unittest: any
