--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: base64
-version: 0.5.0
+version: 0.1.0
 author: warren.strange@gmail.com
-description: A port of the Apache commons Base 64 codec to dart.
+description: A Base 64 codec for dart.
 homepage: https://github.com/wstrange/base64
-dependencies:
+dev_dependencies:
   unittest: any
-
