--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: base64
+name: base64_codec
 version: 0.1.0
-author: warren.strange@gmail.com
+author: Warren Strange <warren.strange@gmail.com>
 description: A Base 64 codec for dart.
 homepage: https://github.com/wstrange/base64
 dev_dependencies:
